--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,9 @@ body {
   background-color: #f8f9fa;
 }
 
+.myname {
+  border: 2px solid red;
+}
 .header-content {
   text-align: center;
   padding: 80px 0;
@@ -126,7 +129,8 @@ footer {
 
 .about-img img {
   max-width: 100%;
-  border-radius: 50%;
+  border-radius: 10%;
+
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
