Update styles for responsive design

--- a/styles.css
+++ b/styles.css
@@ -160,3 +160,35 @@ footer {
     transform: translateX(0);
   }
 }
+
+@media (min-width: 350px) and (max-width: 768px) {
+  .about-content {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .about-img {
+    margin-right: 0;
+    margin-bottom: 20px;
+    width: 70%;
+  }
+  .about-text {
+    padding: 20px;
+  }
+  .about-text h2 {
+    font-size: 30px;
+    color: red;
+  }
+  .about-text h5 {
+    color: gray;
+    font-weight: 700;
+  }
+  .course-topic {
+    display: flex;
+    flex-direction: column;
+  }
+  .topic {
+    width: 80%;
+    margin-left: 20px;
+  }
+}
